# Copyright (C) 2019. Huawei Technologies Co., Ltd. All rights reserved.

import("//build/harmonyos.gni")

config("cJSON_config") {
    include_dirs = [
      ".",
    ]
}

harmonyos_shared_library("cjson") {
    sources = [
        "cJSON.c",
    ]
    public_configs = [ ":cJSON_config" ]
    subsystem_name = "communication"
}
