# Copyright (C) 2019. Huawei Technologies Co., Ltd. All rights reserved.

import("//build/harmonyos.gni")

config("cJSON_config") {
    include_dirs = [
      ".",
    ]
}

harmonyos_source_set("cjson_src") {
    sources = [
        "cJSON.c",
    ]
    configs = [":cJSON_config"]
}

harmonyos_static_library("cjson_static") {
    deps = [":cjson_src"]
    public_configs = [":cJSON_config"]
}

harmonyos_shared_library("cjson") {
    deps = [":cjson_src"]
    public_configs = [":cJSON_config"]
    subsystem_name = "communication"
}
