# Copyright (C) 2019. Huawei Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

config("cJSON_config") {
    include_dirs = [
      ".",
    ]
}

ohos_source_set("cjson_src") {
    sources = [
        "cJSON.c",
    ]
    configs = [":cJSON_config"]
}

ohos_static_library("cjson_static") {
    deps = [":cjson_src"]
    public_configs = [":cJSON_config"]
}

ohos_shared_library("cjson") {
    deps = [":cjson_src"]
    public_configs = [":cJSON_config"]
    subsystem_name = "hiviewdfx"
}
